objects/SnapShotQuotes__c.object
<CustomObject>
    <fields>
        <fullName>ConName__c</fullName>
        <label>ConName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDT__c</fullName>
        <label>GDT</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <label>GrandTotal</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qunum__c</fullName>
        <label>Qunum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>per__c</fullName>
        <label>per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SnapShotQuotes</label>
    <nameField>
        <label>SnapShotQuotes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapShotQuotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>